# schnorr

./: Cargo.toml
generate_keypair/: Cargo.toml
generate_keypair/src/: main.rs
sign_message/: Cargo.toml
sign_message/src/: main.rs
src/: main.rs
validate_signature/: Cargo.toml
validate_signature/src/: main.rs
