[package]
name = "schnorr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "generate_keypair"
path = "generate_keypair/src/main.rs"

[[bin]]
name = "sign_message"
path = "sign_message/src/main.rs"

[[bin]]
name = "validate_signature"
path = "validate_signature/src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-primes = "0.3.0"
rug = "1.19.2"
sha3 = "0.10.8"
rand = "0.8.5"
base64 = "0.20.0"
ring = "0.16.20"
